--- a/tests/expected/1404.html
+++ b/tests/expected/1404.html
@@ -1,6 +1,3 @@
-<?php
-$db = new PDO('mysql:host=localhost', 'root', null);
-?>
 <!doctype html>
 <html lang=en>
 <head>
@@ -45,11 +42,11 @@ $db = new PDO('mysql:host=localhost', 'root', null);
         </article>
         <section>
             <pre>
-OS: <?php echo php_uname('s'); ?><br/>
-Apache: <?php echo apache_get_version(); ?><br/>
-MySQL Version: <?php echo $db->getAttribute( PDO::ATTR_SERVER_VERSION ); ?><br/>
-PHP Version: <?php echo phpversion(); ?><br/>
-phpMyAdmin Version: <?php echo getenv('PHPMYADMIN_VERSION'); ?><span>&nbsp;</span>
+OS: Linux<br/>
+Apache: Apache/2.4.7 (Ubuntu)<br/>
+MySQL Version: 5.5.50-0ubuntu0.14.04.1<br/>
+PHP Version: 5.6.25-1+deb.sury.org~trusty+1<br/>
+phpMyAdmin Version: 4.6.4<span>&nbsp;</span>
             </pre>
         </section>
     </div>
