--- a/tests/expected/1404.html
+++ b/tests/expected/1404.html
@@ -44,9 +44,9 @@
             <pre>
 OS: Linux<br/>
 Apache: Apache/2.4.7 (Ubuntu)<br/>
-MySQL Version: 5.5.52-0ubuntu0.14.04.1<br/>
-PHP Version: 5.6.27-1+deb.sury.org~trusty+1<br/>
-phpMyAdmin Version: 4.6.4<span>&nbsp;</span>
+MySQL Version: 5.5.58-0ubuntu0.14.04.1<br/>
+PHP Version: 5.6.33-1+ubuntu14.04.1+deb.sury.org+1<br/>
+phpMyAdmin Version: 4.7.7<span>&nbsp;</span>
             </pre>
         </section>
     </div>
