--- a/tests/expected/1604.html
+++ b/tests/expected/1604.html
@@ -44,8 +44,8 @@
             <pre>
 OS: Linux<br/>
 Apache: Apache/2.4.18 (Ubuntu)<br/>
-MySQL Version: 5.7.20-0ubuntu0.16.04.1<br/>
-PHP Version: 5.6.33-1+ubuntu16.04.1+deb.sury.org+1<br/>
+MySQL Version: 5.7.22-0ubuntu0.16.04.1-log<br/>
+PHP Version: 5.6.36-1+ubuntu16.04.1+deb.sury.org+1<br/>
 phpMyAdmin Version: 4.7.7<span>&nbsp;</span>
             </pre>
         </section>
