--- a/tests/expected/1804-php7.html
+++ b/tests/expected/1804-php7.html
@@ -46,7 +46,7 @@ OS: Linux<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
 MySQL Version: 5.7.26-0ubuntu0.18.04.1-log<br/>
 PHP Version: 7.3.6-1+ubuntu18.04.1+deb.sury.org+1<br/>
-phpMyAdmin Version: 4.9.0.1<span>&nbsp;</span>
+phpMyAdmin Version: 4.9.0.1
             </pre>
         </section>
     </div>
