Locking to php 7.3.x , Cleaning up a bunch of stuff. Added scripts. Update README.
- Broke many of the commands to their orn RUN for caching.
- Added scripts for building, running, and clearing tested containers/images as ./docker-*.sh files.
- Updated the README.md
- I ran the test scripts: ./docker-run-test-1*04.sh and everything works.
  - However, when I run the ci_sut image, it fails by saying it can't connect to port 3000/3001 respectivly.
  - Not sure why the port mapping isn't working.

--- a/tests/expected/1804-php7.3.html
+++ b/tests/expected/1804-php7.3.html
@@ -42,10 +42,10 @@
         </article>
         <section>
             <pre>
-OS: Linux<br/>
-Apache: Apache/2.4.18 (Ubuntu)<br/>
-MySQL Version: 5.7.26-0ubuntu0.16.04.1-log<br/>
-PHP Version: 7.3.6-1+ubuntu16.04.1+deb.sury.org+1<br/>
+OS: Ubuntu 18.04.3 LTS<br/>
+Apache: Apache/2.4.29 (Ubuntu)<br/>
+MySQL Version: 5.7.28-0ubuntu0.18.04.4<br/>
+PHP Version: 7.3.12-1+ubuntu18.04.1+deb.sury.org+1<br/>
 phpMyAdmin Version: 4.9.0.1            </pre>
         </section>
     </div>
