--- a/tests/expected/1804-php7.3.html
+++ b/tests/expected/1804-php7.3.html
@@ -44,7 +44,7 @@
             <pre>
 OS: Ubuntu 18.04.3 LTS<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
-MySQL Version: 5.7.28-0ubuntu0.18.04.4<br/>
+MySQL Version: 5.7.28-0ubuntu0.18.04.4-log<br/>
 PHP Version: 7.3.12-1+ubuntu18.04.1+deb.sury.org+1<br/>
 phpMyAdmin Version: 4.9.0.1            </pre>
         </section>
