And forgot to update the 1604 image test.

--- a/tests/expected/1604-php7.3.html
+++ b/tests/expected/1604-php7.3.html
@@ -44,7 +44,7 @@
             <pre>
 OS: Ubuntu 16.04.6 LTS<br/>
 Apache: Apache/2.4.18 (Ubuntu)<br/>
-MySQL Version: 5.7.28-0ubuntu0.16.04.2<br/>
+MySQL Version: 5.7.28-0ubuntu0.16.04.2-log<br/>
 PHP Version: 7.3.12-1+ubuntu16.04.1+deb.sury.org+1<br/>
 phpMyAdmin Version: 4.9.0.1            </pre>
         </section>
