--- a/tests/expected/1804-php7.html
+++ b/tests/expected/1804-php7.html
@@ -44,9 +44,9 @@
             <pre>
 OS: Linux<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
-MySQL Version: 5.7.26-0ubuntu0.18.04.1-log<br/>
-PHP Version: 7.3.6-1+ubuntu18.04.1+deb.sury.org+1<br/>
-phpMyAdmin Version: 4.9.0.1            </pre>
+MySQL Version: 5.7.29-0ubuntu0.18.04.1-log<br/>
+PHP Version: 7.4.3<br/>
+phpMyAdmin Version: 5.0.1           </pre>
         </section>
     </div>
 </body>
