Add improvements from #75

--- a/tests/expected/1604-php7.html
+++ b/tests/expected/1604-php7.html
@@ -42,7 +42,7 @@
         </article>
         <section>
             <pre>
-OS: Linux<br/>
+OS: Ubuntu 16.04.6 LTS<br/>
 Apache: Apache/2.4.18 (Ubuntu)<br/>
 MySQL Version: 5.7.29-0ubuntu0.16.04.1-log<br/>
 PHP Version: 7.4.3<br/>
