--- a/tests/expected/1804-php7.html
+++ b/tests/expected/1804-php7.html
@@ -42,11 +42,11 @@
         </article>
         <section>
             <pre>
-OS: Linux<br/>
+OS: Ubuntu 18.04.4 LTS<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
 MySQL Version: 5.7.29-0ubuntu0.18.04.1-log<br/>
 PHP Version: 7.4.3<br/>
-phpMyAdmin Version: 5.0.1           </pre>
+phpMyAdmin Version: 5.0.1            </pre>
         </section>
     </div>
 </body>
