--- a/tests/expected/1804-php71.html
+++ b/tests/expected/1804-php71.html
@@ -42,10 +42,10 @@
         </article>
         <section>
             <pre>
-OS: Ubuntu 18.04.4 LTS<br/>
+OS: Ubuntu 18.04.5 LTS<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
-MySQL Version: 5.7.30-0ubuntu0.18.04.1-log<br/>
-PHP Version: 7.4.8<br/>
+MySQL Version: 5.7.31-0ubuntu0.18.04.1-log<br/>
+PHP Version: 7.1.33-17+ubuntu18.04.1+deb.sury.org+1<br/>
 phpMyAdmin Version: 5.0.2            </pre>
         </section>
     </div>
