--- a/tests/expected/1804-php7.html
+++ b/tests/expected/1804-php7.html
@@ -44,7 +44,7 @@
             <pre>
 OS: Ubuntu 18.04.5 LTS<br/>
 Apache: Apache/2.4.29 (Ubuntu)<br/>
-MySQL Version: 5.7.35-0ubuntu0.18.04.1-log<br/>
+MySQL Version: 5.7.35-0ubuntu0.18.04.1<br/>
 PHP Version: 7.4.23<br/>
 phpMyAdmin Version: 5.1.1            </pre>
         </section>
